--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,9 @@
 apiVersion: app/v1
 kind: Deployment
 metadata:
-  name:deploymet-superset
+  name: deploymet-superset
+  lables: 
+    app:superset
 spec:
   replicas: 2
   selector:
