--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: app/v1
 kind: Deployment
 metadata:
-  name: deploymet-superset
+  name: superset-deployment
   lables: 
     app:superset
 spec:
