--- a/deployment_airflow.yaml
+++ b/deployment_airflow.yaml
@@ -2,9 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: airflow-deployment
-  spec:
-    containers:
-    - name: airflow
-      image: puckel/docker-airflow
-      ports:
-      - containerPort: 8080
+  spec: 
+    containers: 
+      - 
+        image: puckel/docker-airflow
+        name: airflow
+        ports: 
+          - 
+            containerPort: 8080
