--- a/deployment_airflow.yaml
+++ b/deployment_airflow.yaml
@@ -3,10 +3,18 @@ kind: Deployment
 metadata: 
   name: airflow-deployment
 spec: 
-  containers: 
-    - 
-      image: puckel/docker-airflow
-      name: airflow
-      ports: 
-        - 
-          containerPort: 8080
+  selector:
+    matchLabels: 
+      app: airflow
+    replicas: 1
+    template:
+      metadata: 
+        labels:
+          app: airflow
+  spec:           
+    containers: 
+      - 
+        image: puckel/docker-airflow
+        name: airflow
+        ports: 
+        - containerPort: 8080
