--- a/deployment_airflow.yaml
+++ b/deployment_airflow.yaml
@@ -3,18 +3,19 @@ kind: Deployment
 metadata: 
   name: airflow-deployment
 spec: 
-  selector:
+  replicas: 2
+  selector: 
     matchLabels: 
       app: airflow
-    replicas: 1
-    template:
-      metadata: 
-        labels:
-          app: airflow
-  spec:           
-    containers: 
-      - 
-        image: puckel/docker-airflow
-        name: airflow
-        ports: 
-        - containerPort: 8080
+  template: 
+    metadata: 
+      labels: 
+        app: airflow
+    spec: 
+      containers: 
+        - 
+          image: "puckel/docker-airflow"
+          name: airflow
+          ports: 
+            - 
+              containerPort: 80
