--- a/deployment_airflow.yaml
+++ b/deployment_airflow.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata: 
   name: airflow-deployment
 spec: 
-  replicas: 
+  replicas: 1
   selector: 
     matchLabels: 
       app: airflow
@@ -14,7 +14,7 @@ spec:
     spec: 
       containers: 
         - 
-          image: puckel/docker-airflow:2.0.0
+          image: "puckel/docker-airflow:2.0.0"
           name: airflow
           ports: 
             - 
